{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 418,
  "lineage": "9b8fd52c-39b5-483e-dea4-8a30566d54ff",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fa477d477703122",
            "arn": "arn:aws:ec2:us-east-1:544629450972:instance/i-09ea94a77d9c0577f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ea94a77d9c0577f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0324ec6d0eb786f86",
            "private_dns": "ip-10-0-3-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.78",
            "public_ip": "35.171.161.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd8bf0811b00aeca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058319cb83fb41506",
            "tags": {
              "Name": "BastionHost"
            },
            "tags_all": {
              "Name": "BastionHost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04cd47162684ab6f8"
            ]
          },
          "dependencies": [
            "module.EC2.aws_security_group.SG",
            "module.EC2.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544629450972:security-group/sg-04cd47162684ab6f8",
            "description": "Allow SSH traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cd47162684ab6f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-sg",
            "name_prefix": "",
            "owner_id": "544629450972",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00a113216e341af5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03513dbd7db078f0b",
            "domain": "vpc",
            "id": "eipalloc-03513dbd7db078f0b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-222-239-86.compute-1.amazonaws.com",
            "public_ip": "3.222.239.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544629450972:internet-gateway/igw-0c63e54107a841d4e",
            "id": "igw-0c63e54107a841d4e",
            "owner_id": "544629450972",
            "tags": {
              "Name": "My-IGW"
            },
            "tags_all": {
              "Name": "My-IGW"
            },
            "vpc_id": "vpc-00a113216e341af5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03513dbd7db078f0b",
            "association_id": "eipassoc-0d2b6b8f70c566660",
            "connectivity_type": "public",
            "id": "nat-0cf9605090c579939",
            "network_interface_id": "eni-057adbca9af422ad2",
            "private_ip": "10.0.3.148",
            "public_ip": "3.222.239.86",
            "subnet_id": "subnet-058319cb83fb41506",
            "tags": {
              "Name": "my-ngw"
            },
            "tags_all": {
              "Name": "my-ngw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544629450972:route-table/rtb-03691e5370aed0552",
            "id": "rtb-03691e5370aed0552",
            "owner_id": "544629450972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf9605090c579939",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a113216e341af5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544629450972:route-table/rtb-0f9e6c2cbbc3c99d9",
            "id": "rtb-0f9e6c2cbbc3c99d9",
            "owner_id": "544629450972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c63e54107a841d4e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a113216e341af5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-rts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3f544264f70402b",
            "route_table_id": "rtb-03691e5370aed0552",
            "subnet_id": "subnet-0682ad628bbfd3ddb"
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.pri-rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf6fe0c1fa7a6dcf",
            "route_table_id": "rtb-03691e5370aed0552",
            "subnet_id": "subnet-048bda218d7f4283c"
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.pri-rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061fbf443474fac7a",
            "route_table_id": "rtb-0f9e6c2cbbc3c99d9",
            "subnet_id": "subnet-058319cb83fb41506"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub-rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544629450972:subnet/subnet-0682ad628bbfd3ddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0682ad628bbfd3ddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544629450972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-s1"
            },
            "tags_all": {
              "Name": "private-s1"
            },
            "vpc_id": "vpc-00a113216e341af5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544629450972:subnet/subnet-048bda218d7f4283c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048bda218d7f4283c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544629450972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-s2"
            },
            "tags_all": {
              "Name": "private-s2"
            },
            "vpc_id": "vpc-00a113216e341af5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544629450972:subnet/subnet-058319cb83fb41506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058319cb83fb41506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544629450972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet"
            },
            "tags_all": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-00a113216e341af5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544629450972:vpc/vpc-00a113216e341af5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061891e35dbea0f54",
            "default_route_table_id": "rtb-03010edb3f2a4b632",
            "default_security_group_id": "sg-04597b0e744164634",
            "dhcp_options_id": "dopt-026f42b8ef897fcdd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a113216e341af5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03010edb3f2a4b632",
            "owner_id": "544629450972",
            "tags": {
              "Name": "eks-vpc1"
            },
            "tags_all": {
              "Name": "eks-vpc1"
            }
          }
        }
      ]
    }
  ]
}